# libcrc

./: .gitignore  CMakeLists.txt  README.md
crc16_a/: CMakeLists.txt  test_crc16_a.c
crc16_a/crc/: crc16_a.c  crc16_a.default  crc16_a.h
crc16_arc/: CMakeLists.txt  test_crc16_arc.c
crc16_arc/crc/: CMakeLists.txt  crc16_arc.c  crc16_arc.h
crc16_aug_ccitt/: CMakeLists.txt
crc16_aug_ccitt/crc/: crc16_aug_ccitt.c  crc16_aug_ccitt.default  crc16_aug_ccitt.h
crc16_buypass/: CMakeLists.txt  test_crc16_buypass.c
crc16_buypass/crc/: crc16_buypass.c  crc16_buypass.default  crc16_buypass.h
crc16_ccit_zero/: CMakeLists.txt  test_crc16_ccit_zero.c
crc16_ccit_zero/crc/: crc16_ccit_zero.c  crc16_ccit_zero.h
crc16_ccitt_false/: CMakeLists.txt  test_crc16_ccitt_false.c
crc16_ccitt_false/crc/: crc16_ccitt_false.c  crc16_ccitt_false.default  crc16_ccitt_false.h  crc16_ccitt_false.table
crc16_cdma2000/: CMakeLists.txt
crc16_cdma2000/crc/: crc16_cdma2000.c  crc16_cdma2000.default  crc16_cdma2000.h
crc16_dds_110/: CMakeLists.txt  test_crc16_dds_110.c
crc16_dds_110/crc/: CMakeLists.txt  crc16_dds_110.c  crc16_dds_110.default  crc16_dds_110.h
crc16_dect_r/: CMakeLists.txt
crc16_dect_r/crc/: CMakeLists.txt  crc16_dect_r.c  crc16_dect_r.default  crc16_dect_r.h
crc16_dect_x/: CMakeLists.txt
crc16_dect_x/crc/: CMakeLists.txt  crc16_dect_x.c  crc16_dect_x.default  crc16_dect_x.h
crc16_dnp/: CMakeLists.txt
crc16_dnp/crc/: CMakeLists.txt  crc16_dnp.c  crc16_dnp.default  crc16_dnp.h
crc16_en_13757/: CMakeLists.txt  test_crc16_en_13757.c
crc16_en_13757/crc/: CMakeLists.txt  crc16_en_13757.c  crc16_en_13757.default  crc16_en_13757.h
crc16_genibus/: CMakeLists.txt  test_crc16_genibus.c
crc16_genibus/crc/: crc16_genibus.c  crc16_genibus.default  crc16_genibus.h
crc16_ibm/: CMakeLists.txt  test_crc16_ibm.c
crc16_ibm/crc/: crc16_ibm.c  crc16_ibm.default  crc16_ibm.h
crc16_kermit/: CMakeLists.txt  test_crc16_kermit.c
crc16_kermit/crc/: CMakeLists.txt  crc16_kermit.c  crc16_kermit.default  crc16_kermit.h
crc16_maxim/: CMakeLists.txt
crc16_maxim/crc/: crc16_maxim.c  crc16_maxim.default  crc16_maxim.h
crc16_mcrf4xx/: CMakeLists.txt  test_crc16_mcrf4xx.c
crc16_modbus/: CMakeLists.txt  test_crc16_modbus.c
crc16_modbus/crc/: crc16_modbus.c  crc16_modbus.default  crc16_modbus.h
crc16_riello/: CMakeLists.txt
crc16_t10_dif/: CMakeLists.txt  test_crc16_t10_dif.c
crc16_t10_dif/crc/: CMakeLists.txt  crc16_t10_dif.c  crc16_t10_dif.default  crc16_t10_dif.h
crc16_teledisk/: CMakeLists.txt
crc16_teledisk/crc/: CMakeLists.txt  crc16_teledisk.c  crc16_teledisk.default  crc16_teledisk.h
crc16_tms37157/: CMakeLists.txt
crc16_usb/: CMakeLists.txt  test_crc16_usb.c
crc16_usb/crc/: crc16_usb.c  (+3 more)
crc16_x25/: CMakeLists.txt
crc16_xmodem/: CMakeLists.txt
crc16_xmodem/crc/: CMakeLists.txt  crc16_xmodem.c  crc16_xmodem.default  crc16_xmodem.h
crc24_flexray_a/: CMakeLists.txt
crc24_flexray_b/: CMakeLists.txt
crc24_openpgp/: CMakeLists.txt  test_crc24_openpgp.c
crc32/: CMakeLists.txt
crc32_bzip2/: CMakeLists.txt
crc32_bzip2/crc/: crc32_bzip2.c  crc32_bzip2.default  crc32_bzip2.h
crc32_c/: CMakeLists.txt
crc32_c/crc/: CMakeLists.txt  crc32_c.c  crc32_c.default  crc32_c.h  crc32_c.table
crc32_d/: CMakeLists.txt
crc32_jamcrc/: CMakeLists.txt  test_crc32_jamcrc.c
crc32_mpeg2/: CMakeLists.txt
crc32_mpeg2/crc/: crc32_mpeg2.c  crc32_mpeg2.default  crc32_mpeg2.h  crc32_mpeg2.table
crc32_posix/: CMakeLists.txt
crc32_posix/crc/: crc32_posix.c  crc32_posix.default  crc32_posix.h
crc32_q/: CMakeLists.txt
crc32_xfer/: CMakeLists.txt
crc32_xfer/crc/: crc32_xfer.c  crc32_xfer.default  crc32_xfer.h
crc64_ecma_182/: CMakeLists.txt
crc64_go_iso/: CMakeLists.txt  test_crc64_go_iso.c
crc64_go_iso/crc/: CMakeLists.txt  crc64_go_iso.c  crc64_go_iso.default  crc64_go_iso.h
crc64_we/: CMakeLists.txt
crc64_xz/: CMakeLists.txt  test_crc64_xz.c
crc8/: CMakeLists.txt
crc8_8h2f/: CMakeLists.txt
crc8_cdma2000/: CMakeLists.txt
crc8_darc/: CMakeLists.txt  test_crc8_darc.c
crc8_dvb_s2/: CMakeLists.txt  test_crc8_dvb_s2.c
crc8_dvb_s2/crc/: crc8_dvb_s2.c  crc8_dvb_s2.default  crc8_dvb_s2.h
crc8_ebu/: CMakeLists.txt
crc8_ebu/crc/: crc8_ebu.c  crc8_ebu.default  crc8_ebu.h
crc8_icode/: CMakeLists.txt  test_crc8_icode.c
crc8_itu/: CMakeLists.txt
crc8_itu/crc/: crc8_itu.c  crc8_itu.default  crc8_itu.h  crc8_itu.table
crc8_maxim/: CMakeLists.txt  test_crc8_maxim.c
crc8_maxim/crc/: CMakeLists.txt  crc8_maxim.c  crc8_maxim.default  crc8_maxim.h
crc8_rohc/: CMakeLists.txt  test_crc8_rohc.c
crc8_sae_j1850/: CMakeLists.txt
crc8_sae_j1850/crc/: crc8_sae_j1850.c  crc8_sae_j1850.default  crc8_sae_j1850.h  crc8_sae_j1850.table
crc8_sae_j1850_zero/: CMakeLists.txt  test_crc8_sae_j1850_zero.c
crc8_sae_j1850_zero/crc/: crc8_sae_j1850_zero.c  crc8_sae_j1850_zero.default  crc8_sae_j1850_zero.h
crc8_wcdma/: CMakeLists.txt
crc8_wcdma/crc/: crc8_wcdma.c  crc8_wcdma.default  crc8_wcdma.h
inc/: main.h
libcrc/crc16_aug_ccitt/: CMakeLists.txt  test_crc16_aug_ccitt.c
libcrc/crc16_aug_ccitt/crc/: CMakeLists.txt  crc16_aug_ccitt.default  crc16_aug_ccitt.h
libcrc/crc16_ccit_zero/: CMakeLists.txt
libcrc/crc16_ccit_zero/crc/: CMakeLists.txt  crc16_ccit_zero.c
libcrc/crc16_cdma2000/: CMakeLists.txt  test_crc16_cdma2000.c
libcrc/crc16_cdma2000/crc/: CMakeLists.txt  crc16_cdma2000.c  crc16_cdma2000.default  crc16_cdma2000.h  crc16_cdma2000.table
libcrc/crc16_dect_r/: CMakeLists.txt  test_crc16_dect_r.c
libcrc/crc16_dect_x/: CMakeLists.txt  test_crc16_dect_x.c
libcrc/crc16_dect_x/crc/: crc16_dect_x.default  crc16_dect_x.table
libcrc/crc16_en_13757/: CMakeLists.txt
libcrc/crc16_en_13757/crc/: crc16_en_13757.table
libcrc/crc16_genibus/: CMakeLists.txt
libcrc/crc16_genibus/crc/: CMakeLists.txt  crc16_genibus.c  crc16_genibus.default  crc16_genibus.h
libcrc/crc16_ibm/: CMakeLists.txt
libcrc/crc16_ibm/crc/: CMakeLists.txt
src/: main.c  test_crc16_kermit.c  test_crc24_openpgp.c  test_crc32.c  test_crc64_go_iso.c  test_crc8.c
(+252 files in other folders)
